[package]
name = "p2p-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.52", features = ["tcp", "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux",
    "quic", "tls", "dns", "async-std", "noise", "yamux", "websocket", "ping", "macros"] }
tokio = { version = "1.16.1", features = ["full"]}
futures = "0.3.21"
async-std = { version = "1.12.0", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = "0.3.30"